--- a/Harshit/index.html
+++ b/Harshit/index.html
@@ -63,11 +63,10 @@
   </header>
 
   <main class="main">
-
+   
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-
-      <img src="/Harshit/pexels-daan-stevens-66128-939331.jpg" alt="" data-aos="fade-in">
+      <img src="/Harshit/assets/img/pexels-jean-daniel-4006151.jpg" alt="" >
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
